[package]
name = "rustbox-inbound-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
rustbox-host-api = { path = "../../../host/rustbox-host-api" }
rustbox-io = { path = "../../../foundation/rustbox-io" }
rustbox-kernel = { path = "../../../kernel/rustbox-kernel" }
rustbox-types = { path = "../../../foundation/rustbox-types" }

[dev-dependencies]
rustbox-outbound-direct = { path = "../../outbound/rustbox-outbound-direct" }
rustbox-route = { path = "../../../kernel/rustbox-route" }
rustbox-runtime-tokio = { path = "../../../runtime/rustbox-runtime-tokio" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
