[package]
name = "rustbox-inbound-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
rustbox-kernel = { path = "../../../kernel/rustbox-kernel" }
rustbox-io = { path = "../../../foundation/rustbox-io" }
rustbox-types = { path = "../../../foundation/rustbox-types" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }

[dev-dependencies]
rustbox-outbound-direct = { path = "../../outbound/rustbox-outbound-direct" }
rustbox-route = { path = "../../../kernel/rustbox-route" }

[lints]
workspace = true
