[package]
name = "rustbox-inbound-socks5"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atomic-waker = "1"
fast-socks5 = "1.0.0"
rustbox-kernel = { path = "../../../kernel/rustbox-kernel" }
rustbox-inbound-http = { path = "../rustbox-inbound-http" }
rustbox-io = { path = "../../../foundation/rustbox-io" }
rustbox-types = { path = "../../../foundation/rustbox-types" }
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
rustbox-outbound-direct = { path = "../../outbound/rustbox-outbound-direct" }
rustbox-route = { path = "../../../kernel/rustbox-route" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
