[package]
name = "rustbox-inbound-transparent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-kernel = { path = "../../../kernel/rustbox-kernel" }
rustbox-types = { path = "../../../foundation/rustbox-types" }

[dev-dependencies]
rustbox-io = { path = "../../../foundation/rustbox-io" }
tokio = { version = "1", features = ["io-util"] }

[lints]
workspace = true
